Avoid using gap

--- a/packages/kiwi-react/src/bricks/TextInput.css
+++ b/packages/kiwi-react/src/bricks/TextInput.css
@@ -23,6 +23,7 @@
 	--✨height: 1.5rem;
 	--✨padding-inline: 8px;
 	--✨padding-block: 4px;
+	--✨gap: 4px;
 
 	@layer base {
 		appearance: none;
@@ -63,20 +64,27 @@
 		}
 
 		&:not(:where(input, textarea)) {
-			gap: 4px;
 			overflow: hidden;
-
-			&:has(input:not(:first-child)) {
-				padding-inline-start: var(--✨padding-inline);
-			}
-
-			&:has(input:not(:last-child)) {
-				padding-inline-end: var(--✨padding-inline);
-			}
 
 			&:has(input:focus) {
 				outline: 2px solid var(--kiwi-color-border-accent-strong);
 				outline-offset: 1px;
+			}
+
+			> :first-child:not(input) {
+				margin-inline-start: var(--✨padding-inline);
+			}
+
+			> :last-child:not(input) {
+				margin-inline-end: var(--✨padding-inline);
+			}
+
+			/** Instead of using `gap` for the space between elements, we use padding to give more space to the input. */
+			> :not(input):not(:first-child) {
+				&:not(input + &) {
+					padding-left: var(--✨gap);
+					box-sizing: content-box;
+				}
 			}
 
 			input {
@@ -87,14 +95,15 @@
 				background-color: transparent;
 				outline: unset;
 				padding-block: var(--✨padding-block);
+				padding-inline: var(--✨padding-inline);
+			}
 
-				&:where(:first-child) {
-					padding-inline-start: var(--✨padding-inline);
-				}
+			> * + input {
+				padding-inline-start: var(--✨gap);
+			}
 
-				&:where(:last-child) {
-					padding-inline-end: var(--✨padding-inline);
-				}
+			> * ~ input {
+				padding-inline-end: var(--✨gap);
 			}
 
 			svg {
